kubernetes/Cluster-Int-Temp/deployments/home-automation/zigbee2mqtt/ingress.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: zigbee2mqtt
    namespace: home-automation
    annotations:
        kubernetes.io/ingress.class: traefik-external
spec:
    entryPoints:
        - websecure
    routes:
        - match: ENC[AES256_GCM,data:eT7eLe33lmBkUVtwjvvGDAqVYViP2RxNhmM=,iv:QiCIxTrRb3c0C7HdfKT6VoZSOlSl2bjVGK8b3gA9h5w=,tag:qE0dhAkNFl28xbpC7apuxA==,type:str]
          kind: Rule
          services:
            - name: ENC[AES256_GCM,data:J6NQqvmcEGpHlw8=,iv:8bOTv0wr3/eti2whCF3w2R7K6uSB4tkK7HWQktLWui0=,tag:eOl/0ay4GeTbstwIYW/RjQ==,type:str]
              port: ENC[AES256_GCM,data:dJyYsA==,iv:KUKIEP4V7QXAu1XV5i5dQmfdgFn5HngzUKBcw4CfCf4=,tag:jz2Ph3EpUBXM7u4oc40rMw==,type:int]
    tls:
        secretName: ENC[AES256_GCM,data:fP3s9LELSy8R4lM=,iv:8d+EOtiiCoPrGATRHbZ7ZiAakoNQ39jb2y1WoiQEqBc=,tag:FdY/7aI0dgBWyR3vqRGnpw==,type:str]
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1k8rczdg4c0u0a2z57zy334al5n0s3vk6mrqm6njnt3j8hr39sq4qxcrlcs
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBDWTcxTXpzRGZ6L0JCZFBD
[...]
            frzFx4L/+MD94jiUW6yLnct7Rc7gbi+l3BSHIjAHw9suD4LbkzBilw==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-05-29T22:10:22Z"
    mac: ENC[AES256_GCM,data:BDRpBZ28h+wi5ieoLIesUZtnPz6Q9WwWvsse0Uy7WpPQ/zlEtNxOB+cEhhxBcAyHpFIyIGYioOJj7bCMIJXzA3DbK04Pdlm8Iy7BFezSaBW3veWMAsiKrRYgzFnHuDgQUpjm+pFjmDNzj+42x1OkZy29ZGB6bY0gYIrmevtY7OM=,iv:uh5g//eRzI+IddcvqCd77FEKwM7kCi1EoJa8ME43IJk=,tag:dpsoDql7UuVqLKa4RzIBSg==,type:str]
    pgp: []
    encrypted_regex: ^(data|stringData|data|match|secretName|services|ports|externalName|loadBalancerIP|bootstrap|k8s.v1.cni.cncf.io/networks)$
    version: 3.8.1
